--- a/Web_Project/WebApp/Templates/product-list.html
+++ b/Web_Project/WebApp/Templates/product-list.html
@@ -111,169 +111,172 @@
 
                     <!-- Grid row -->
                     <div class="row">
+                        <form action="./">
 
-                        <!-- Filter by category -->
-                        <div class="col-md-6 col-lg-12 mb-5">
+                            <!-- Filter by category -->
+                            <div class="col-md-6 col-lg-12 mb-5">
 
-                            <h5 class="font-weight-bold dark-grey-text"><strong>FOR</strong></h3>
+                                <h3 class="font-weight-bold dark-grey-text"><strong>FOR</strong></h3>
 
-                                <div class="divider"></div>
+                                    <div class="divider"></div>
 
-                                <!-- Radio group -->
-                                <div class="form-group ">
+                                    <!-- Radio group -->
+                                    <div class="form-group ">
 
-                                    <input class="form-check-input" name="gender" type="radio" id="all_gender" checked>
+                                        <input class="form-check-input" name="gender" type="radio" id="all_gender" checked value="" checked>
 
-                                    <label for="all_gender" class="form-check-label dark-grey-text">Tất cả</label>
+                                        <label for="all_gender" class="form-check-label dark-grey-text">Tất cả</label>
 
-                                </div>
+                                    </div>
 
-                                <div class="form-group">
+                                    <div class="form-group">
 
-                                    <input class="form-check-input" name="gender" type="radio" id="male_gender">
+                                        <input class="form-check-input" name="gender" type="radio" value="male" id="male_gender">
 
-                                    <label for="male_gender" class="form-check-label dark-grey-text">Nam</label>
+                                        <label for="male_gender" class="form-check-label dark-grey-text">Nam</label>
 
-                                </div>
+                                    </div>
 
-                                <div class="form-group">
+                                    <div class="form-group">
 
-                                    <input class="form-check-input" name="gender" type="radio" id="female_gender">
+                                        <input class="form-check-input" name="gender" type="radio" value="female" id="female_gender">
 
-                                    <label for="female_gender" class="form-check-label dark-grey-text">Nữ</label>
+                                        <label for="female_gender" class="form-check-label dark-grey-text">Nữ</label>
 
-                                </div>
+                                    </div>
 
-                                <!-- Radio group -->
-                        </div>
+                                    <!-- Radio group -->
+                            </div>
 
-                        <!-- Filter by category -->
-                        <div class="col-md-6 col-lg-12 mb-5">
+                            <!-- Filter by category -->
+                            <div class="col-md-6 col-lg-12 mb-5">
 
-                            <h5 class="font-weight-bold dark-grey-text"><strong>LOẠI TRANG PHỤC:</strong></h3>
+                                <h3 class="font-weight-bold dark-grey-text"><strong>LOẠI TRANG PHỤC:</strong></h3>
 
-                                <div class="divider"></div>
+                                    <div class="divider"></div>
 
-                                <!-- Radio group -->
-                                <div class="form-group ">
+                                    <!-- Radio group -->
+                                    <div class="form-group ">
 
-                                    <input class="form-check-input" name="clothing" type="radio" id="all_clothing"
-                                        checked>
+                                        <input class="form-check-input" name="clothing" type="radio" value="" id="all_clothing"
+                                            checked>
 
-                                    <label for="all_clothing" class="form-check-label dark-grey-text">Tất cả</label>
+                                        <label for="all_clothing" class="form-check-label dark-grey-text">Tất cả</label>
 
-                                </div>
+                                    </div>
 
-                                <div class="form-group">
+                                    <div class="form-group">
 
-                                    <input class="form-check-input" name="clothing" type="radio" id="jacket_clothing">
+                                        <input class="form-check-input" name="clothing" type="radio" value="áo khoác" id="jacket_clothing">
 
-                                    <label for="jacket_clothing" class="form-check-label dark-grey-text">Áo
-                                        khoác</label>
+                                        <label for="jacket_clothing" class="form-check-label dark-grey-text">Áo
+                                            khoác</label>
 
-                                </div>
+                                    </div>
 
-                                <div class="form-group">
+                                    <div class="form-group">
 
-                                    <input class="form-check-input" name="clothing" type="radio" id="shirt_clothing">
+                                        <input class="form-check-input" name="clothing" type="radio" value="áo thun" id="shirt_clothing">
 
-                                    <label for="shirt_clothing" class="form-check-label dark-grey-text">Áo thun</label>
+                                        <label for="shirt_clothing" class="form-check-label dark-grey-text">Áo thun</label>
 
-                                </div>
+                                    </div>
 
-                                <div class="form-group">
+                                    <div class="form-group">
 
-                                    <input class="form-check-input" name="clothing" type="radio" id="hoodies_clothing">
+                                        <input class="form-check-input" name="clothing" type="radio" value="hoodies vs sweatshirt" id="hoodies_clothing">
 
-                                    <label for="hoodies_clothing" class="form-check-label dark-grey-text">Hoodies &
-                                        Sweatshirt</label>
+                                        <label for="hoodies_clothing" class="form-check-label dark-grey-text">Hoodies &
+                                            Sweatshirt</label>
 
-                                </div>
+                                    </div>
 
-                                <div class="form-group">
+                                    <div class="form-group">
 
-                                    <input class="form-check-input" name="clothing" type="radio" id="pants_clothing">
+                                        <input class="form-check-input" name="clothing" type="radio" value="quần" id="pants_clothing">
 
-                                    <label for="pants_clothing" class="form-check-label dark-grey-text">Quần</label>
+                                        <label for="pants_clothing" class="form-check-label dark-grey-text">Quần</label>
 
-                                </div>
+                                    </div>
 
-                                <div class="form-group">
+                                    <div class="form-group">
 
-                                    <input class="form-check-input" name="clothing" type="radio" id="t_shirt_clothing">
+                                        <input class="form-check-input" name="clothing" type="radio" value="sơ mi" id="t_shirt_clothing">
 
-                                    <label for="t_shirt_clothing" class="form-check-label dark-grey-text">Sơ mi</label>
+                                        <label for="t_shirt_clothing" class="form-check-label dark-grey-text">Sơ mi</label>
 
-                                </div>
+                                    </div>
 
-                                <!-- Radio group -->
-                        </div>
-                        <!-- Filter by category -->
+                                    <!-- Radio group -->
+                            </div>
+                            <!-- Filter by category -->
 
-                        <!--Filter by category-->
-                        <div class="col-md-6 col-lg-12 mb-5">
+                            <!--Filter by category-->
+                            <div class="col-md-6 col-lg-12 mb-5">
 
-                            <h5 class="font-weight-bold dark-grey-text"><strong>GIÁ TIỀN</strong></h3>
+                                <h3 class="font-weight-bold dark-grey-text"><strong>GIÁ TIỀN</strong></h3>
 
-                                <div class="divider"></div>
+                                    <div class="divider"></div>
 
-                                <!-- Radio group -->
-                                <div class="form-group ">
+                                    <!-- Radio group -->
+                                    <div class="form-group ">
 
-                                    <input class="form-check-input" name="price" type="radio" id="all_price" checked>
+                                        <input class="form-check-input" name="price" type="radio" value="" id="all_price" checked>
 
-                                    <label for="all_price" class="form-check-label dark-grey-text">Tất cả</label>
+                                        <label for="all_price" class="form-check-label dark-grey-text">Tất cả</label>
 
-                                </div>
+                                    </div>
 
-                                <div class="form-group">
+                                    <div class="form-group">
 
-                                    <input class="form-check-input" name="price" type="radio" id="VND0100_price">
+                                        <input class="form-check-input" name="price" type="radio" value="100000" id="VND0100_price">
 
-                                    <label for="VND0100_price" class="form-check-label dark-grey-text">0 -
-                                        100.000đ</label>
+                                        <label for="VND0100_price" class="form-check-label dark-grey-text">0 -
+                                            100.000đ</label>
 
-                                </div>
+                                    </div>
 
-                                <div class="form-group">
+                                    <div class="form-group">
 
-                                    <input class="form-check-input" name="price" type="radio" id="VND100300_price">
+                                        <input class="form-check-input" name="price" type="radio" value="300000" id="VND100300_price">
 
-                                    <label for="VND100300_price" class="form-check-label dark-grey-text">100.000đ -
-                                        300.000đ</label>
+                                        <label for="VND100300_price" class="form-check-label dark-grey-text">0đ -
+                                            300.000đ</label>
 
-                                </div>
+                                    </div>
 
-                                <div class="form-group">
+                                    <div class="form-group">
 
-                                    <input class="form-check-input" name="price" type="radio" id="VND300500_price">
+                                        <input class="form-check-input" name="price" type="radio" value="500000" id="VND300500_price">
 
-                                    <label for="VND300500_price" class="form-check-label dark-grey-text">300.000đ -
-                                        500.000đ</label>
+                                        <label for="VND300500_price" class="form-check-label dark-grey-text">0đ -
+                                            500.000đ</label>
 
-                                </div>
+                                    </div>
 
-                                <div class="form-group">
+                                    <div class="form-group">
 
-                                    <input class="form-check-input" name="price" type="radio" id="VND5001m_price">
+                                        <input class="form-check-input" name="price" type="radio" value="1000000" id="VND5001m_price">
 
-                                    <label for="VND5001m_price" class="form-check-label dark-grey-text">500.000đ -
-                                        1.000.000đ</label>
+                                        <label for="VND5001m_price" class="form-check-label dark-grey-text">0đ -
+                                            1.000.000đ</label>
 
-                                </div>
+                                    </div>
 
-                                <div class="form-group">
+                                    <div class="form-group">
 
-                                    <input class="form-check-input" name="price" type="radio" id="VND1m_price">
+                                        <input class="form-check-input" name="price" type="radio" value="10000000" id="VND1m_price">
 
-                                    <label for="VND1m_price" class="form-check-label dark-grey-text">Hơn
-                                        1.000.000đ</label>
+                                        <label for="VND1m_price" class="form-check-label dark-grey-text">Hơn
+                                            1.000.000đ</label>
 
-                                </div>
+                                    </div>
 
-                                <!-- Radio group -->
-                        </div>
-                        <!--Filter by category-->
+                                    <!-- Radio group -->
+                            </div>
+                            <!--Filter by category-->
+                            <button class="btn btn-primary" type="submit" >Apply</button>
+                        </form>
                     </div>
                     <!-- Grid row -->
 
