--- a/Web_Project/WebApp/Templates/product-list.html
+++ b/Web_Project/WebApp/Templates/product-list.html
@@ -397,8 +397,8 @@
                                 <td>
                                     <div class="mt-1">
                                         <div class="form-check form-check-inline pl-0">
-                                            <input type="radio" class="form-check-input" id="small"
-                                                name="materialExampleRadios" checked>
+                                            <input type="radio" class="form-check-input" checked id="small"
+                                                name="materialExampleRadios" checked="checked">
                                             <label class="form-check-label small text-uppercase card-link-secondary"
                                                 for="small">S</label>
                                         </div>
