fix history greenish and Don hang rename

--- a/Web_Project/WebApp/Templates/Base_History.html
+++ b/Web_Project/WebApp/Templates/Base_History.html
@@ -9,7 +9,12 @@
     <link href="/static/css/fontawesome-all.css" rel="stylesheet">
     <link href="/static/css/swiper.css" rel="stylesheet">
 	<link href="/static/css/magnific-popup.css" rel="stylesheet">
-	<link href="/static/css/styles_base_UI_home.css" rel="stylesheet">
+    <link href="/static/css/styles_base_UI_home.css" rel="stylesheet">
+    <style>
+        .history {
+            color: #14bf98!important;
+        }
+    </style>
     <!-- <style>
         #history-table {
             font-family: Arial, Helvetica, sans-serif;
