--- a/Web_Project/WebApp/Templates/Base_UI_WithLogIn.html
+++ b/Web_Project/WebApp/Templates/Base_UI_WithLogIn.html
@@ -90,7 +90,7 @@
                         <a class="nav-link" href="{% url 'Page:page_ViewHistory' user.id %}">HISTORY</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="{% url 'Page:page_ViewProductUserBuy' user.id %}">PURCHASE HISTORY</a>
+                        <a class="nav-link page-scroll" href="{% url 'Page:page_ViewProductUserBuy' user.id %}">ĐƠN HÀNG</a>
                     </li>
 
                     <li class="nav-item">
