change admin mangement UI

--- a/Web_Project/WebApp/Templates/Base_ViewCart.html
+++ b/Web_Project/WebApp/Templates/Base_ViewCart.html
@@ -74,7 +74,7 @@
                             {% for item in cartItem %}
                             <tr>
                                 <!-- Product Image -->
-                                <td><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
+                                <td class = "align-middle"><img src="https://dummyimage.com/50x50/55595c/fff" /> </td>
 
                                 <!-- Product name -->
                                 <td class = "align-middle">
