--- a/Web_Project/WebApp/Templates/Form/form_orderInfo.html
+++ b/Web_Project/WebApp/Templates/Form/form_orderInfo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -36,4 +36,80 @@
         </tbody>
     </table>
 </body>
-</html>
+</html> -->
+
+<div class="modal fade" id="order_detail_{{od.id}}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLongTitle">Thông tin đơn hàng</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <div class="table-responsive">
+                <table class = "table">
+                    <thead>
+                        <tr>
+                            <th scope="col">Sản phẩm</th>
+                            <th scope="col"></th>
+                            <th scope="col" class="text-left">Giá</th>
+                            <th scope="col" class="text-center">Số lượng</th>
+                            <th scope="col" class="text-right">Thành tiền</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for item in cartItem %} 
+                            {% if item.id_cart == od.id_cart %}
+                                <tr>
+                                    <!-- Product Image -->
+                                    <td><img src="https://dummyimage.com/50x50/55595c/fff"/> </td>
+
+                                    <!-- Product name -->
+                                    <td class = "align-middle">
+                                        <a href="{% url 'Page:page_ViewDetail' item.id_product.id %}" 
+                                            role="button" class="font-weight-bold text-capitalize"
+                                            style="text-decoration: none;" 
+                                            >{{item.id_product}}</a>
+                                    </td>
+
+                                    <!-- Product price -->
+                                    <td class="text-left align-middle">
+                                        {{item.id_product.price_sale|floatformat:'-1'}} VNĐ
+                                    </td>
+
+                                    <!-- Product quantity -->
+                                    <td class="text-center align-middle">
+                                        <span class = "quantity_in_cart_item_{{item.id}}">
+                                            <span class="child_{{item.id}}" style="padding: 10px">  {{item.num}}  </span>
+                                        </span>
+                                    </td>
+
+                                    <!-- Product total price -->
+                                    <td class="text-right align-middle">
+                                        {{item.sum_product|floatformat:'-1'}} VNĐ
+                                    </td>
+                                </tr>
+                            {% endif %}
+                        {% endfor %}
+                        <tr>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td><strong>Tổng tiền</strong></td>
+                                <td class="text-right align-middle"><strong>{{total|floatformat:'-1'}} VNĐ</strong></td>
+                            </tr>
+                        </tr>
+                    </tbody>
+                </table>
+            </div> 
+        </div>
+
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
